--- a/index.html
+++ b/index.html
@@ -564,7 +564,7 @@
             <div class="owl-carousel testimonial-carousel wow fadeInUp" data-wow-delay="0.6s">
                 <div class="testimonial-item bg-light my-4">
                     <div class="d-flex align-items-center border-bottom pt-5 pb-4 px-5">
-                        <img class="img-fluid rounded" src="img/testimonial-1.jpg" style="width: 60px; height: 60px;" >
+                        <img class="img-fluid rounded" src="img/female ID good.jpg" style="width: 60px; height: 60px;" >
                         <div class="ps-4">
                             <h4 style="color:green!important" class="text-primary mb-1">Sarah Johnson</h4>
                             <small class="text-uppercase">Happy Homeowner</small>
@@ -576,7 +576,7 @@
                 </div>
                 <div class="testimonial-item bg-light my-4">
                     <div class="d-flex align-items-center border-bottom pt-5 pb-4 px-5">
-                        <img class="img-fluid rounded" src="img/testimonial-2.jpg" style="width: 60px; height: 60px;" >
+                        <img class="img-fluid rounded" src="img/male ID good.jpg" style="width: 60px; height: 60px;" >
                         <div class="ps-4">
                             <h4 style="color:green!important" class="text-primary mb-1">John Smith</h4>
                             <small class="text-uppercase">City Council Member</small>
@@ -588,7 +588,7 @@
                 </div>
                 <div class="testimonial-item bg-light my-4">
                     <div class="d-flex align-items-center border-bottom pt-5 pb-4 px-5">
-                        <img class="img-fluid rounded" src="img/testimonial-3.jpg" style="width: 60px; height: 60px;" >
+                        <img class="img-fluid rounded" src="img/male ID good.jpg" style="width: 60px; height: 60px;" >
                         <div class="ps-4">
                             <h4 style="color:green!important" class="text-primary mb-1">Michael Anderson</h4>
                             <small class="text-uppercase">Business Owner</small>
@@ -600,7 +600,7 @@
                 </div>
                 <div class="testimonial-item bg-light my-4">
                     <div class="d-flex align-items-center border-bottom pt-5 pb-4 px-5">
-                        <img class="img-fluid rounded" src="img/testimonial-4.jpg" style="width: 60px; height: 60px;" >
+                        <img class="img-fluid rounded" src="img/male ID good.jpg" style="width: 60px; height: 60px;" >
                         <div class="ps-4">
                             <h4 style="color:green!important" class="text-primary mb-1">David Thompson</h4>
                             <small class="text-uppercase">Project Developer</small>
@@ -627,7 +627,7 @@
                 <div class="col-lg-4 wow slideInUp" data-wow-delay="0.3s">
                     <div class="team-item bg-light rounded overflow-hidden">
                         <div class="team-img position-relative overflow-hidden">
-                            <img class="img-fluid w-100" src="img/team-1.jpg" alt="">
+                            <img class="img-fluid w-100" src="img/male ID good.jpg" alt="">
                             <div class="team-social">
                                 <a style="border-color:green!important; background-color:green!important"class="btn btn-lg btn-primary btn-lg-square rounded" href=""><i class="fab fa-twitter fw-normal"></i></a>
                                 <a style="border-color:green!important; background-color:green!important" class="btn btn-lg btn-primary btn-lg-square rounded" href=""><i class="fab fa-facebook-f fw-normal"></i></a>
@@ -644,7 +644,7 @@
                 <div class="col-lg-4 wow slideInUp" data-wow-delay="0.6s">
                     <div class="team-item bg-light rounded overflow-hidden">
                         <div class="team-img position-relative overflow-hidden">
-                            <img class="img-fluid w-100" src="img/team-2.jpg" alt="">
+                            <img class="img-fluid w-100" src="img/female ID good.jpg" alt="">
                             <div class="team-social">
                                 <a style="border-color:green!important; background-color:green!important" class="btn btn-lg btn-primary btn-lg-square rounded" href=""><i class="fab fa-twitter fw-normal"></i></a>
                                 <a style="border-color:green!important; background-color:green!important" class="btn btn-lg btn-primary btn-lg-square rounded" href=""><i class="fab fa-facebook-f fw-normal"></i></a>
@@ -661,7 +661,7 @@
                 <div class="col-lg-4 wow slideInUp" data-wow-delay="0.9s">
                     <div class="team-item bg-light rounded overflow-hidden">
                         <div class="team-img position-relative overflow-hidden">
-                            <img class="img-fluid w-100" src="img/team-3.jpg" alt="">
+                            <img class="img-fluid w-100" src="img/male ID good.jpg" alt="">
                             <div class="team-social">
                                 <a style="border-color:green!important; background-color:green!important" class="btn btn-lg btn-primary btn-lg-square rounded" href=""><i class="fab fa-twitter fw-normal"></i></a>
                                 <a style="border-color:green!important; background-color:green!important" class="btn btn-lg btn-primary btn-lg-square rounded" href=""><i class="fab fa-facebook-f fw-normal"></i></a>
@@ -693,15 +693,15 @@
                     <div class="blog-item bg-light rounded overflow-hidden">
                         <div class="blog-img position-relative overflow-hidden">
                             <img class="img-fluid" src="img/blog-1.jpg" alt="">
-                            <a style="background-color:green!important"class="position-absolute top-0 start-0 bg-primary text-white rounded-end mt-5 py-2 px-4" href="">Web Design</a>
+                            <a style="background-color:green!important"class="position-absolute top-0 start-0 bg-primary text-white rounded-end mt-5 py-2 px-4" href="">Construction</a>
                         </div>
                         <div class="p-4">
                             <div class="d-flex mb-3">
                                 <small class="me-3"><i style="color:green!important" class="far fa-user text-primary me-2"></i>John Doe</small>
-                                <small><i style="color:green!important" class="far fa-calendar-alt text-primary me-2"></i>01 Jan, 2045</small>
+                                <small><i style="color:green!important" class="far fa-calendar-alt text-primary me-2"></i>09 Jun, 2023</small>
                             </div>
-                            <h4 class="mb-3">How to build a website</h4>
-                            <p>Dolor et eos labore stet justo sed est sed sed sed dolor stet amet</p>
+                            <h4 class="mb-3">Embarking on a Construction Project?</h4>
+                            <p>Anthas Construction Industries Limited simplifies the construction process for you. Our streamlined approach involves thorough planning, precise execution, and transparent communication every step of the way. Trust us to bring your vision to reality with professionalism, expertise, and unwavering commitment to quality...</p>
                             <a style="color:green!important" class="text-uppercase" href="">Read More <i class="bi bi-arrow-right"></i></a>
                         </div>
                     </div>
@@ -710,15 +710,15 @@
                     <div class="blog-item bg-light rounded overflow-hidden">
                         <div class="blog-img position-relative overflow-hidden">
                             <img class="img-fluid" src="img/blog-2.jpg" alt="">
-                            <a style="background-color:green!important" class="position-absolute top-0 start-0 bg-primary text-white rounded-end mt-5 py-2 px-4" href="">Web Design</a>
+                            <a style="background-color:green!important" class="position-absolute top-0 start-0 bg-primary text-white rounded-end mt-5 py-2 px-4" href="">Consultation and Design</a>
                         </div>
                         <div class="p-4">
                             <div class="d-flex mb-3">
                                 <small class="me-3"><i style="color:green!important" class="far fa-user text-primary me-2"></i>John Doe</small>
                                 <small><i style="color:green!important" class="far fa-calendar-alt text-primary me-2"></i>01 Jan, 2045</small>
                             </div>
-                            <h4 class="mb-3">How to build a website</h4>
-                            <p>Dolor et eos labore stet justo sed est sed sed sed dolor stet amet</p>
+                            <h4 class="mb-3">Consultation and Design Made Simple</h4>
+                            <p>At Anthas Construction Industries Limited, we prioritize your vision and bring it to life through a streamlined consultation and design process. Our experts will closely collaborate with you, understanding your needs and preferences to create a custom solution that exceeds your expectations. Experience the seamless journey from concept to reality with our efficient and client-focused approach.</p>
                             <a style="color:green!important" class="text-uppercase" href="">Read More <i class="bi bi-arrow-right"></i></a>
                         </div>
                     </div>
@@ -727,15 +727,15 @@
                     <div class="blog-item bg-light rounded overflow-hidden">
                         <div class="blog-img position-relative overflow-hidden">
                             <img class="img-fluid" src="img/blog-3.jpg" alt="">
-                            <a style="background-color:green!important" class="position-absolute top-0 start-0 bg-primary text-white rounded-end mt-5 py-2 px-4" href="">Web Design</a>
+                            <a style="background-color:green!important" class="position-absolute top-0 start-0 bg-primary text-white rounded-end mt-5 py-2 px-4" href="">Infrastructure Development</a>
                         </div>
                         <div class="p-4">
                             <div class="d-flex mb-3">
                                 <small class="me-3"><i style="color:green!important" class="far fa-user text-primary me-2"></i>John Doe</small>
                                 <small><i style="color:green!important" class="far fa-calendar-alt text-primary me-2"></i>01 Jan, 2045</small>
                             </div>
-                            <h4 class="mb-3">How to build a website</h4>
-                            <p>Dolor et eos labore stet justo sed est sed sed sed dolor stet amet</p>
+                            <h4 class="mb-3">What is Infrastructure Development</h4>
+                            <p>Infrastructure development refers to the process of planning, designing, constructing, and maintaining essential physical structures and systems that support economic, social, and environmental activities within a region or country...</p>
                             <a style="color:green!important" class="text-uppercase" href="">Read More <i class="bi bi-arrow-right"></i></a>
                         </div>
                     </div>
@@ -776,7 +776,7 @@
                         <a href="index.html" class="navbar-brand">
                             <h1 class="m-0 text-white"><i class="fa fa-user-tie me-2"></i>Startup</h1>
                         </a>
-                        <p class="mt-3 mb-4">Lorem diam sit erat dolor elitr et, diam lorem justo amet clita stet eos sit. Elitr dolor duo lorem, elitr clita ipsum sea. Diam amet erat lorem stet eos. Diam amet et kasd eos duo.</p>
+                        <p class="mt-3 mb-4">Anthas Construction Industries Limited invites you to take the first step towards a successful partnership. Sign up today and let us bring your construction dreams to life with our expertise, dedication, and commitment to excellence.</p>
                         <form action="">
                             <div class="input-group">
                                 <input type="text" class="form-control border-white p-3" placeholder="Your Email">
