--- a/index.html
+++ b/index.html
@@ -279,7 +279,7 @@
                     </div>
                 </div>
                 <div class="col-lg-4">
-                    <div class="row g-5">
+                    <div class="rool,w g-5">
                         <div class="col-12 wow zoomIn" data-wow-delay="0.4s">
                             <div class="bg-primary rounded d-flex align-items-center justify-content-center mb-3" style="width: 60px; height: 60px;">
                                 <i class="fa fa-users-cog text-white"></i>
@@ -621,7 +621,7 @@
         <div class="container py-5">
             <div class="section-title text-center position-relative pb-3 mb-5 mx-auto" style="max-width: 600px;">
                 <h5  class="fw-bold text-primary text-uppercase">Team Members</h5>
-                <h1 class="mb-0">Professional Stuffs Ready to Help Your Business</h1>
+                <h1 class="mb-0">Professional Staffs Ready to Help Your Business</h1>
             </div>
             <div class="row g-5">
                 <div class="col-lg-4 wow slideInUp" data-wow-delay="0.3s">
@@ -793,11 +793,11 @@
                             </div>
                             <div class="d-flex mb-2">
                                 <i  class="bi bi-geo-alt text-primary me-2"></i>
-                                <p class="mb-0">123 Street, New York, USA</p>
+                                <p class="mb-0">22, Etete Road, Off Adesuwa Road, G.R.A, Benin city, Edo state</p>
                             </div>
                             <div class="d-flex mb-2">
                                 <i  class="bi bi-envelope-open text-primary me-2"></i>
-                                <p class="mb-0">info@example.com</p>
+                                <p class="mb-0">info@anthasconstruction.com</p>
                             </div>
                             <div class="d-flex mb-2">
                                 <i  class="bi bi-telephone text-primary me-2"></i>
