--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
                 <div class="d-inline-flex align-items-center" style="height: 45px;">
                     <small class="me-3 text-light"><i class="fa fa-map-marker-alt me-2"></i>22, Etete Road, Off Adesuwa Road, G.R.A, Benin city, Edo state</small>
                     <small class="me-3 text-light"><i class="fa fa-phone-alt me-2"></i>+2348039715014</small>
-                    <small class="text-light"><i class="fa fa-envelope-open me-2"></i>info@anthas.com</small>
+                    <small class="text-light"><i class="fa fa-envelope-open me-2"></i>info@anthasconstruction.com</small>
                 </div>
             </div>
             <div class="col-lg-4 text-center text-lg-end">
@@ -801,7 +801,7 @@
                             </div>
                             <div class="d-flex mb-2">
                                 <i  class="bi bi-telephone text-primary me-2"></i>
-                                <p class="mb-0">+012 345 67890</p>
+                                <p class="mb-0">+2348039715014</p>
                             </div>
                             <div class="d-flex mt-4">
                                 <a  class="btn btn-primary btn-square me-2" href="#"><i class="fab fa-twitter fw-normal"></i></a>
@@ -823,19 +823,6 @@
                                 <a class="text-light" href="#"><i  class="bi bi-arrow-right text-primary me-2"></i>Contact Us</a>
                             </div>
                         </div>
-                        <div class="col-lg-4 col-md-12 pt-0 pt-lg-5 mb-5">
-                            <div class="section-title section-title-sm position-relative pb-3 mb-4">
-                                <h3 class="text-light mb-0">Popular Links</h3>
-                            </div>
-                            <div class="link-animated d-flex flex-column justify-content-start">
-                                <a class="text-light mb-2" href="#"><i  class="bi bi-arrow-right text-primary me-2"></i>Home</a>
-                                <a class="text-light mb-2" href="#"><i  class="bi bi-arrow-right text-primary me-2"></i>About Us</a>
-                                <a class="text-light mb-2" href="#"><i  class="bi bi-arrow-right text-primary me-2"></i>Our Services</a>
-                                <a class="text-light mb-2" href="#"><i  class="bi bi-arrow-right text-primary me-2"></i>Meet The Team</a>
-                                <a class="text-light mb-2" href="#"><i  class="bi bi-arrow-right text-primary me-2"></i>Latest Blog</a>
-                                <a class="text-light" href="#"><i  class="bi bi-arrow-right text-primary me-2"></i>Contact Us</a>
-                            </div>
-                        </div>
                     </div>
                 </div>
             </div>
@@ -846,10 +833,10 @@
             <div class="row justify-content-end">
                 <div  class="col-lg-8 col-md-6">
                     <div class="d-flex align-items-center justify-content-center" style="height: 75px;">
-                        <p class="mb-0">&copy; <a class="text-white border-bottom" href="#">Your Site Name</a>. All Rights Reserved. 
+                        <p class="mb-0">&copy; <a class="text-white border-bottom" href="#">Anthas Construction Industies Ltd</a>. All Rights Reserved. 
 						
 						<!--/*** This template is free as long as you keep the footer author’s credit link/attribution link/backlink. If you'd like to use the template without the footer author’s credit link/attribution link/backlink, you can purchase the Credit Removal License from "https://htmlcodex.com/credit-removal". Thank you for your support. ***/-->
-						Designed by <a class="text-white border-bottom" href="https://htmlcodex.com">HTML Codex</a></p>
+						Designed by <a class="text-white border-bottom" href="https://htmlcodex.com">Zuxa</a></p>
                     </div>
                 </div>
             </div>
